tests/conformance/syntax/positive/one_line_definition_valid.ditt
module Syntax.OneLineDefinition where

postulate C : Cat
id : (x : C) -> C = \x. x
