tests/conformance/syntax/negative/frontend_invalid_module_header.ditt
module Frontend.SurfaceBadHeader

postulate C : Cat
id : (x : C) -> C = \x. x
